working on layout issues with the board, the text and the quit button

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
     margin: auto;
     display: grid;
     grid-template-rows: 1fr 4fr 1fr 2fr;
+    grid-template-columns: 4fr 2fr;
     width: 75vw;
     height: 100vh;
 }
@@ -22,7 +23,7 @@ h1 {
 .form-wrapper {
     display: grid;
     grid-row: 1 / 4;
-    grid-column: 1 / 2;
+    grid-column: 1 / 3;
     justify-self: center;
     align-self: center;
     grid-template-columns: 1fr 1fr 1fr;
@@ -111,11 +112,14 @@ input[type="text"]{
     justify-self: center;
 }
 
-
-.board-wrapper {
+.game-wrapper {
     display: grid;
-    grid-row: 2 / 3;
-    grid-column: 1 / 2;
+    grid-row: 1 / 4;
+    grid-column: 1 / 3;
+}
+
+.board {
+    display: grid;
     justify-self: center;
     align-self: center;
     grid-template-rows: repeat(3, 1fr);
@@ -128,9 +132,10 @@ input[type="text"]{
     background: #ffdbc5;
     border-radius: 10px;
     border-color: #2e112d;
+    grid-column: 2 / 3;
     grid-row: 3 / 4;
-    justify-self: end;
-    align-items: center;
+    justify-self: center;
+    align-self: center;
 }
 
 .board-square {
@@ -141,7 +146,7 @@ input[type="text"]{
 }
 
 .board-square:hover {
-    background: #f7f7f7;
+    background: #fafafa;
 }
 
 .middle-column {
@@ -155,8 +160,8 @@ input[type="text"]{
 }
 
 .status-wrapper {
-    display: grid;
-    grid-template-rows: 1fr auto;
+    display: flex;
+    flex-direction: column;
     justify-self: center;
     grid-column: 1 / 2;
     grid-row: 3 / 4;
